--- a/_posts/2022-12-24-INITIUM-女性主义的具体生活-我们需要其他女性作为人生楷模吗.html
+++ b/_posts/2022-12-24-INITIUM-女性主义的具体生活-我们需要其他女性作为人生楷模吗.html
@@ -10,29 +10,15 @@ author:
 
 <p>「历史书上满是男性的样子，语文课本里多是男作家的选篇，女性除了是谁的妻子，谁的女儿，还能是谁？」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221225-feminism-in-real-life-female-role-model/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/86647d4771f841d5807d0e7b5f3803d8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit">插画：Mantha Mok</span></figcaption></figure><p><small>【编者按】某天端的编辑记者们听到读者L的困惑－－L二十多岁，是个做科研的博士生。作为科研界的少数，她的困扰是：女博士怎么总被人说是没趣的人？实验室里的男生怎么总觉得女性做些稳当的技术活就好了？Lab coat里面穿小背心怎么就不行？……直到她发现，科学界也有一些不太典型的女性教授，她才觉得：啊，原来（女）人可以活成这个样子。</small></p>
-<p>这个世界无疑一直在给女性们灌输“完美现代女性的样子”：最好事业有成，但在家仍对丈夫小鸟依人，家事一点不落下，跟公婆和和气气，孩子教得品学兼优，身材脸蛋还永远停留在25岁。我们的确好像需要比较不典型的女性role model，去告诉我们作为女性的人生也有别的可能。但问题还没停止：一个女性主义者，如果role model都是男人，可以吗？有role model是不是也在神化别人？</p>
-<p>在“女性主义的具体生活”系列的第一期，我们讨论了女人是不是就得负责洗碗的<a href="https://theinitium.com/article/20221029-fenimism-in-real-life-who-does-the-dish/">问题</a>；而这一期，由读者L的困惑开始，编辑S和E﹑记者I，和我们的撰稿人T，展开了一场关于“女人如何学习成为女人”的讨论……</p>
+<p><small>这个世界无疑一直在给女性们灌输“完美现代女性的样子”：最好事业有成，但在家仍对丈夫小鸟依人，家事一点不落下，跟公婆和和气气，孩子教得品学兼优，身材脸蛋还永远停留在25岁。我们的确好像需要比较不典型的女性role model，去告诉我们作为女性的人生也有别的可能。但问题还没停止：一个女性主义者，如果role model都是男人，可以吗？有role model是不是也在神化别人？</small></p>
+<p><small>在“女性主义的具体生活”系列的第一期，我们讨论了女人是不是就得负责洗碗的<a href="https://theinitium.com/article/20221029-fenimism-in-real-life-who-does-the-dish/">问题</a>；而这一期，由读者L的困惑开始，编辑S和E﹑记者I，和我们的撰稿人T，展开了一场关于“女人如何学习成为女人”的讨论……</small></p>
 <p><strong>读者L：</strong></p>
 <blockquote>
 <p>Role Model对我来说，可能代表了一些我想追求的人生理念，或者，他们活成了我想要的样子。</p>
 </blockquote>
 <p>我不太记得小时候的“Role Model”是谁，但我印象比较深刻的是，在一本人物传记的书里，会把爱迪生、牛顿、居里夫人三个人放在一起。那时候像其他小朋友一样，第一个理想就是要当一个“科学家”，于是在那本书里，居里夫人就显得很特别：一来她是唯一的女性，二来她又是少数拿过两次诺贝尔奖的科学家。</p>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
+<p>其实从小到大我的职业理想一直在变，有想过律师、设计师、医生等等，后来选专业时，各种机缘巧合下又回到科研。</p>
+<p>我所在的研究领域里，无论是比较有成就的科学家，还是学校的教授，男性占7、8成，甚至同组男同事偶尔会说，“实验室里的技术岗蛮适合女生的，薪水不错、稳定、工作内容又不太需要有挑战性。”他可能无意冒犯，但我会觉得很不适。</p>
  
  
  
@@ -54,9 +40,8 @@ author:
  
  
  
+ 
 
- 
- 
  
  
  
@@ -84,7 +69,22 @@ author:
  
  
  
-<p>其实从小到大我的职业理想一直在变，有想过律师、设计师、医生等等，后来选专业时，各种机缘巧合下又回到科研。</p><p>我所在的研究领域里，无论是比较有成就的科学家，还是学校的教授，男性占7、8成，甚至同组男同事偶尔会说，“实验室里的技术岗蛮适合女生的，薪水不错、稳定、工作内容又不太需要有挑战性。”他可能无意冒犯，但我会觉得很不适。</p><p>我在最初读博的时候是对博士有一些刻板印象的，尤其是女博士，总觉得会是比较刻板、严肃甚至可能有点无趣的样子。想像里她们都是学霸，生活只有学习、做实验和写报告，我导师以前也说过，科研几十年如一日，像吃饭喝水一样过朴素刻苦的生活。</p><p>同时，作为科研工作者，日常是对服装有要求的。例如，一些实验需要操作有毒的试剂或者放射性仪器等，所以头发一定要绑起来，要长裤长袖，将自己包裹起来，以防危险试剂滴落在皮肤上。但我是一个喜欢尝试不同奇奇怪怪风格衣服的人，而且因为去实验室都要在外面套Lab-coat，所以我觉得就算安全考虑，上衣穿吊带、漏肩也没有太大问题，毕竟外面会加一层。但当我这样穿去学校的时候，就会引来很多的目光和一些调侃，会被周围人看作异端。</p><p>因此，我一度觉得这样的生活不太适合我，但后来接触到了一些不一样的科研女性，比如曾是我导师学生的Y教授。</p><p>在接触到Y教授之前，我记得先是在看她资料时看到一张照片，是她去参加一个集合科研、政坛、商界等各界顶尖人士的活动合影，她是其中唯一一个女性。当时的我，只是很懵懂地觉得“她很厉害”。后来读到有关她的报导，好像第一段就在说“这是一个很不典型的教授”，她染了紫色头发，玩摩托，平日里喜欢跳舞。</p><p>今年获得诺贝尔化学奖的女教授 Carolyn R. Bertozzi 也是一个“不典型教授”的例子。她很喜欢音乐，大学期间和同学组乐队，甚至名叫“Bored of Education”。她的研究也是激发我走向科研的一个很重要的因素，看她得奖那天的视频，欢呼里她也拿出手机说要拍一段发到社交媒体，就感觉她是个很活泼有生气的人。</p><p>Y教授和 Bertozzi 的样子，好像打开了我对科研女性的想像，即使作为科研工作者，你自己和你的生活也可以很丰富。</p><p>我也会去看一些男教授的课题、论文，但很少关注他们的生活，觉得好像不是很有参考价值。这样的差别最初可能未必和女权主义有关，或是我自己没有意识到，只是一种很原始的冲动，想要去看和自已同一个性别的人是如何成长起来的。</p><p><a class="image" href="https://theinitium.com/article/20221225-feminism-in-real-life-female-role-model/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/38a71d0249594b83952af0fc346acc5e.JPG?imageView2/1/w/1080/h/726/format/jpg" alt="西班牙马德里康普顿斯大学，一名学生在罢课期间试图阻止一名教授授课。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>我在最初读博的时候是对博士有一些刻板印象的，尤其是女博士，总觉得会是比较刻板、严肃甚至可能有点无趣的样子。想像里她们都是学霸，生活只有学习、做实验和写报告，我导师以前也说过，科研几十年如一日，像吃饭喝水一样过朴素刻苦的生活。</p><p>同时，作为科研工作者，日常是对服装有要求的。例如，一些实验需要操作有毒的试剂或者放射性仪器等，所以头发一定要绑起来，要长裤长袖，将自己包裹起来，以防危险试剂滴落在皮肤上。但我是一个喜欢尝试不同奇奇怪怪风格衣服的人，而且因为去实验室都要在外面套Lab-coat，所以我觉得就算安全考虑，上衣穿吊带、漏肩也没有太大问题，毕竟外面会加一层。但当我这样穿去学校的时候，就会引来很多的目光和一些调侃，会被周围人看作异端。</p><p>因此，我一度觉得这样的生活不太适合我，但后来接触到了一些不一样的科研女性，比如曾是我导师学生的Y教授。</p><p>在接触到Y教授之前，我记得先是在看她资料时看到一张照片，是她去参加一个集合科研、政坛、商界等各界顶尖人士的活动合影，她是其中唯一一个女性。当时的我，只是很懵懂地觉得“她很厉害”。后来读到有关她的报导，好像第一段就在说“这是一个很不典型的教授”，她染了紫色头发，玩摩托，平日里喜欢跳舞。</p><p>今年获得诺贝尔化学奖的女教授 Carolyn R. Bertozzi 也是一个“不典型教授”的例子。她很喜欢音乐，大学期间和同学组乐队，甚至名叫“Bored of Education”。她的研究也是激发我走向科研的一个很重要的因素，看她得奖那天的视频，欢呼里她也拿出手机说要拍一段发到社交媒体，就感觉她是个很活泼有生气的人。</p><p>Y教授和 Bertozzi 的样子，好像打开了我对科研女性的想像，即使作为科研工作者，你自己和你的生活也可以很丰富。</p><p>我也会去看一些男教授的课题、论文，但很少关注他们的生活，觉得好像不是很有参考价值。这样的差别最初可能未必和女权主义有关，或是我自己没有意识到，只是一种很原始的冲动，想要去看和自已同一个性别的人是如何成长起来的。</p><p><a class="image" href="https://theinitium.com/article/20221225-feminism-in-real-life-female-role-model/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/38a71d0249594b83952af0fc346acc5e.JPG?imageView2/1/w/1080/h/726/format/jpg" alt="西班牙马德里康普顿斯大学，一名学生在罢课期间试图阻止一名教授授课。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">西班牙马德里康普顿斯大学，一名学生在罢课期间试图阻止一名教授授课。<span class="credit">摄：Andrea Comas/Reuters/达志影像</span></figcaption><p></p><p>另外我的男性长辈们，主要是我爸和我的导师，不知为何都会刻意引导我去关注女性的成长经历。</p><p>我爸最喜欢举的例子是撒切尔夫人、奥巴马老婆，还给我买了奥巴马老婆的自传，还有彭丽媛。他很热衷跟我讨论“成功男人背后的女人”，其中撒切尔夫人可能是个例外（提的不是她雷厉风行的一面，而是作为一个女人在家里，为了男人的面子而收敛锋芒的做法）。我的导师则喜欢聊一些所谓“大女主剧”，比如《锦绣未央》，他也会很关注那些很厉害的女教授们，所以很喜欢颜宁。</p><p>总之，我爸喜欢圆滑世故些的女性，我导师更喜欢有个性和棱角的。不过听说我导师在不同学生面前会透露不同的样子，所以我也不确定他的真实想法。比如他也会跟我聊找男朋友之类的话题，但我很抗拒，甚至会直接说“也不一定要结婚啊”、“男朋友可以放一放”这样的话，他后来也几乎不再提了。</p><p>Role Model对我来说，可能代表了一些我想追求的人生理念，或者，他们活成了我想要的样子。</p><p>尤其在化学科研的领域，女性到了一定年龄可能会面临婚育的选择，而化学实验是对怀孕有影响的。所以我看到的很多科研中的女性，到了准备婚育的时候，就会转行，转去不需要做实验的岗位，也有停顿再回来的，但这就需要去承受从头开始的压力，因为实验往往是连续的，从细胞实验到老鼠动物实验，都是一个阶段一个阶段接连观察的，停顿的话很多东西就要从头开始。</p><p>我也偶尔会从导师那里听到一些过去女学生、如今女教授们的故事。比如有一个比较成功的女教授，女儿也读了博并同个领域，但不愿跟著妈妈，我导师会认为，她的成功有一部分因素是她老公给了很多自由，让她有更多的时间在学校和科研。而另一个女教授就是比较悲惨的故事，据导师说，她是个很聪明的人，因身体原因一度放弃学术，但后来又坚持下去，并在一家不错的高校任教，前段时间似乎因产后抑郁自杀了，导师自此很讨厌女教授的丈夫。</p><p>听到这些故事的时候，就觉得好像作为一个女生，你要走上学术道路，要牺牲的东西很多。比如，或者你要有一个很理解很理解你的另一半，或者就不结婚、不生孩子。但反过来说，好像无论是学术、还是其他领域的男性，似乎很少有这种困扰。</p><p><strong>S：</strong></p><p>
 </p><p>那些我喜爱过的（男）人都很厉害，很了不起，但那些作为女性最核心的领会，到了今天，我已经不觉得他们分享得了。</p>
 <p></p><p>女性在不同的学术领域好像都会有不同的困扰－－做科研的话，实验室可能充满著L形容的，“女生还是适合稳定又不太复杂的技术活”的闲言闲语；而在看起来相对进步开放的社会科学院，女性要研究或书写自己关心的题目，例如要研究性别﹑研究queerness，研究各种没那么男性（或最少中性）的议题的话－－好像都要用尽气力证明自己做的东西足够严谨﹑足够重要，足以在学术殿堂占一席位。而男性研究战争，研究其他各样的不平等，却都完全不需要用力证明自己－－他们做的东西当然足够重要，不证自明。</p><p>以往在社会学博班，我就曾经在方法学的研讨会上，听过男教授说自己认为autoethnography（自我民族志）“unscientific”（不够科学），因为没有大数据，又没有用上任何统计工具，N（样本容量）＝1所以没有任何参考价值。而自我民族志刚好就是女性﹑global south和其他少数群体常用的一种研究方法。但问题是，有些东西可以用大数据来研究，可以被概括化，是因为他们足够“正常”啊－－但那些在边缘的人呢？他们的经验难道就不值得成为“知识”的一部份？当日那位男教授被包括我在内的其他人（女性与少数族群）群起而攻之，但我还是很疑惑，为甚么我们就必须要学习捍卫自己书写自己的方式（虽然我甚至不是没研究女性主义，也没做过自我民族志）？还要冒著被评为太有侵略性／不礼貌／不识大体的风险？而主流群体能保持“体面”，大概就是因为他们永远都不需要证明自己吧？</p><p>我不知道怎么定义role model － 但对我来说，可能就是特别关注和喜爱的作家﹑学者﹑音乐家之类，会有点点崇拜的人吧。我好像是近年开始发觉，虽然我没有特别在研究性别甚么的，但即使是在其他范畴，女性的作品总是更能触动我。也许是，到了人生某个阶段，就会无可奈何地发觉自己的人生轨迹跟男性的多么不一样－－以前可能有很多的优势（或特权）让自己察觉不到自己在性别中的边缘身份，但最后还是会有这么一个“醒觉”的过程。</p><p><a class="image" href="https://theinitium.com/article/20221225-feminism-in-real-life-female-role-model/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/c38580d216424d76ac83224d8249d349.jpg?imageView2/1/w/1080/h/818/format/jpg" alt="美国佛吉尼亚州理工大学，一名女子在一个悼念仪式中放气球上天。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
