--- a/_posts/2022-12-25-INMEDIA-mirror演唱會-阿mo感官神經有反應-父親透露-花姐-未有探訪.html
+++ b/_posts/2022-12-25-INMEDIA-mirror演唱會-阿mo感官神經有反應-父親透露-花姐-未有探訪.html
@@ -14,6 +14,7 @@ author: 獨媒報導
 <p>另外李盛林亦在聖誕節接受港台節目《舊日的足跡》訪問，講述5個月來的心路歷程。他憶述事件發生後，立即從加拿大返港，看到阿MO時心情矛盾，為他感到生存而感恩，但同時為亦他感到非常無助。當時阿MO有意識，可以遵從醫生指示，但醫生診斷阿MO有95%不能康復。</p>
 <p>李盛林又指有重看事故發生的影片，「如果當時佢嘅舞姿唔係垂低頭，就會即場破頭而冇咗」，他邊看影片一邊心跳加速，很難受和激動，因為事發前一秒，與一秒後的阿MO，已經變成了另一個人。</p>
 <p>他憶述阿MO進入手術室前，醫院安排家人透過視像為MO打氣，醫生讚阿MO沒有哭，亦沒有怨天尤人，勇敢和鎮定地面對一切未知。事後阿MO住了深切治療部只有四個多星期就離開，比醫生預期的一年半載少很多。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/473HD27q2W" title="320084941_914961719884106_1538439248610023566_n"><img src="https://live.staticflickr.com/65535/52585169294_2377682178_b.jpg" alt="320084941_914961719884106_1538439248610023566_n" /></a><br /><em>港台圖片</em></p>
 <p><strong>大讚So Ching願為兒子付出</strong></p>
 <p>談到阿MO的女朋友、Collar成員So Ching，李盛林讚她是阿MO在信仰以外最大支持，是一個很單純的女孩，很願意為阿MO付出。李盛林又指，So Ching身型雖然瘦，但仍可以熟練地替卧床的阿MO轉身，連醫護也大讚So Ching是一個照顧重創病人的專家。</p>
 <p>不過對於會否鼓勵So Ching復工，李盛林表示要由她本人決定，覺得她也在今次事件承受很大壓力，外人難以理解。</p>
