--- a/_posts/2022-12-26-INITIUM-专访伊朗裔女学者-不止于头巾-不止于女性-我们对抗的是政权本身.html
+++ b/_posts/2022-12-26-INITIUM-专访伊朗裔女学者-不止于头巾-不止于女性-我们对抗的是政权本身.html
@@ -5,10 +5,10 @@ date: 2022-12-26 01:51:00.000000000 +00:00
 link: https://theinitium.com/article/20221226-opinion-international-iran-revolution/
 categories: initium
 tags: blog
-author: 特约撰稿人郭婷 发自温哥华
+author: 特约撰稿人郭婷 发自多伦多
 ---
 
-<p>「伊朗女性参与的是比戴不戴头巾更大的战斗，解下头巾的女性反抗的不是头巾，而是几乎控制著她身体每一部分的国家。」</p><p>特约撰稿人郭婷 发自温哥华</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221226-opinion-international-iran-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/db305211aee84755ac5aeb11ee5cdc92.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年10月1日，伊朗首都德黑兰，有示威抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡，一名参与示威的女子在火堆前举起胜利手势。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「伊朗女性参与的是比戴不戴头巾更大的战斗，解下头巾的女性反抗的不是头巾，而是几乎控制著她身体每一部分的国家。」</p><p>特约撰稿人郭婷 发自多伦多</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221226-opinion-international-iran-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/db305211aee84755ac5aeb11ee5cdc92.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年10月1日，伊朗首都德黑兰，有示威抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡，一名参与示威的女子在火堆前举起胜利手势。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年10月1日，伊朗首都德黑兰，有示威抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡，一名参与示威的女子在火堆前举起胜利手势。<span class="credit">摄：Middle East Images/AP/达志影像</span></figcaption></figure><p><strong>（郭婷，多伦多大学语言研究系助理教授，关注亚洲及亚裔群体的性别、政治和宗教。）</strong></p>
 <p><a href="https://theinitium.com/article/20220923-opinion-iran-hijab-revolution/">头巾女孩阿米尼（Mahsa Amini）之死引发的伊朗抗议</a>，从9月16日开始至今，已经持续三个月。官方依然拒绝承认女孩被捕后有被虐打，对外声称女孩是死于疾病。伊朗不论民族、年龄和性别的人都参与到了这场历时弥久的抗议中，10月时在伊朗的大学之间也爆发了以学生为主体的抗议。这场抗议具有新时代抗争的一些特点：去中心化、善用社交媒体进行传播等，而政权也出招封锁网络，并对海内外民权人士进行迫害。</p>
 <p>外界一般将抗争形容为伊朗女性对宗教桎梏的抵抗，尤其将关注放在头巾和道德警察上－－但伊朗的抗争者关心的就只有头巾吗？取下头巾就一定意味著“解放”吗？伊朗人需要的是什么？比头巾更多的是什么？这一场运动参与的不止女性，还有男性，宗教界人士﹑长期处于伊朗社会边缘的库尔德人，一场运动为何能团结那么多不同身分？在体制内寻求改变还可能吗？……</p>
