Update VOCUS 2022-12-26 patch

--- a/_posts/2022-12-26-VOCUS-令和未來首相系列-六-林芳正-不易流行-長州第十位總理大臣-4-4.html
+++ b/_posts/2022-12-26-VOCUS-令和未來首相系列-六-林芳正-不易流行-長州第十位總理大臣-4-4.html
@@ -47,11 +47,11 @@ author: 謝文生
 <div class="draft-block draft--p left">7月12日朝日新聞記者「野平」詢問：「接續先前的提問，台灣的副總統，因為弔唁安倍總理而訪日。我認為現職的高官訪日是「破例」，想聽大臣的看法？</div>
 <div class="draft-block draft--p left">林芳正回應：「據我所了解的，關於您剛才所提到的人，因為是來參加安倍前總理的葬儀，完全屬於私人性質的訪日。」「總之，與台灣之間是維持在非政府間的實質關係，我們的基本立場，並沒有因此而有任何改變。」</div>
 <div class="draft-block draft--p left">記者會<a href="https://www.mofa.go.jp/mofaj/press/kaiken/kaiken24_000126.html#" target="_blank" class="draft--a">文字網頁</a>；影音部份在09：31～10：11；其連結如下：</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_YIddnTIAn8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_YIddnTIAn8"></iframe></div>
 <div class="draft-block draft--p left">7月15日產經新聞「岡田」記者：台灣的賴清德副總統，因為安倍前總理的過世而來日本。來日本訪問，雖說是屬於私人的行程，但林大臣在記者會上用『所提到的人』這樣的表達方式。想請問您用『所提到的人』這個說法的理由是什麼？有部份的人認為是否是因為顧慮到中國的緣故？批判的聲浪也不小。安倍前總理在生前，是一位重視日本與台灣友情的人，請問依照您的想法，在國葬決定之後，是否會預留台灣相關人員出席的空間？</div>
 <div class="draft-block draft--p left">林芳正的回答為：「首先，詢問『所提到的人』的對話脈絡，關於賴清德副總統，（因為）提問時已經有提到他的名字，所以在回應時就用『所提到的人』來敍述。至今以來，例如（我國的）外交藍皮書等文件，在提到台灣的重要人士時，都會使用他們的頭銜。⋯⋯」</div>
 <div class="draft-block draft--p left">記者會<a href="https://www.mofa.go.jp/mofaj/press/kaiken/kaiken22_000055.html#topic5" target="_blank" class="draft--a">文字網頁</a>；音影部份在5：51～7：25：</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/4PUeOqrwu1s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/4PUeOqrwu1s"></iframe></div>
 <div class="draft-block draft--p left">這起『事件』，7月12日記者會上，其實朝日新聞的記者也只使用『副總統』，並沒有提到賴清德副總統的『名字』。林芳正的回應，究竟是順著脈絡？還是故意迴避？</div>
 <div class="draft-block draft--p left">就筆者個人的看法，應屬記者會的脈絡之可能性較大。理由是在那個時候的氛圍來說，讓賴副總統赴日弔唁一事，是由岸田首相親自拍版定案的；當時的理由有對日本右派交代、對中國警告及對台示好三個層次；7月12日當天賴副總統才離開日本返台，因此那個氛圍下林芳正沒有什麼要顧慮中國、而刻意要不提賴清德名字的必要。</div>
 <div class="draft-block draft--p left">3天後的記者會，產經新聞記者顯然是『刻意唸出』賴清德副總統的名字來詢問，林芳正在回應時也全稱唸出「賴清德副總統」。就算是被駡之後才改口，但林芳正的回答也特別提到日本正式的白交藍皮書中，提到台灣重要人士的頭銜時都照常寫進去，意指「白紙黑色」都寫在那裡了，口頭上還有什麼不能用頭銜的顧慮？</div>
@@ -103,8 +103,4 @@ author: 謝文生
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">YouTube：</span><a href="https://www.youtube.com/user/hayashiyoshimasa" target="_blank" class="draft--a">https://www.youtube.com/user/hayashiyoshimasa</a></div>
 <div class="draft-block draft--p left">（本文結束）</div>
 <div class="draft-block draft--p left">（如您覺得這篇文章值得給予作者鼓勵， 請按下方心形的讚，感謝！）</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-aflf">        <span style="font-weight: bold; ">【</span><a href="https://vocus.cc/tennnozann/63a7d74cfd897800013b4410" target="_blank" class="draft--a"><span style="font-weight: bold; ">4-1</span></a><span style="font-weight: bold; ">】【</span><a href="https://vocus.cc/tennnozann/63a7dbc9fd897800013b6d5d" target="_blank" class="draft--a">4-2</a><span style="font-weight: bold; ">】【</span><a href="https://vocus.cc/tennnozann/63a7e33efd897800013bc0fa" target="_blank" class="draft--a">4-3</a><span style="font-weight: bold; ">】【</span>4-4<span style="font-weight: bold; ">】</span></h2>
-<h2 class="draft-block draft--h2" name="header-dlkrj"></h2>
-<h2 class="draft-block draft--h2" name="header-cu1n5"></h2>
-<h2 class="draft-block draft--h2" name="header-badrv"></h2>
