Update VOCUS 2022-12-27 patch

--- a/_posts/2022-12-26-VOCUS-舞林怪獸爭霸戰-蒙面舞王.html
+++ b/_posts/2022-12-26-VOCUS-舞林怪獸爭霸戰-蒙面舞王.html
@@ -52,4 +52,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">不過這檔選秀節目還是有一些缺點，雖然後製技術很完善但我可以想像現場很多部份可能只能透過影片來還原整體的效果給評審或是觀眾看，並不能達到完全LIVE的效果，在則因為虛擬人物的關係，有些動作其實做起來比真人來說視覺的衝擊要少，有點像是動畫打鬥與真人打鬥的差距，雖然同樣精采，但在有些運鏡和細節部份，動態捕捉無法做到很全面。</div>
 <div class="draft-block draft--p left">但這部節目的確很適合闔家觀賞，至少動畫人物表演跳舞應該有不少趣味性，到後期也有一些像是雙人舞搭檔、超能力融入舞蹈環節、甚至也有與主持人和評審共舞。</div>
 <div class="draft-block draft--p left">比起許多有著壓力和人際關係的選秀來說，《舞林怪獸爭霸戰》算是較為單純也能讓人享受的實境節目，只是之後是否能做到更全面將動態捕抓與人體舞蹈結合，考驗舞者也考驗製作公司的實力。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/NbVUTx4fHuE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/NbVUTx4fHuE"></iframe></div>
