Update VOCUS 2022-12-28 patch

--- a/_posts/2022-12-27-VOCUS-2022-blog點閱前10名文章-回顧.html
+++ b/_posts/2022-12-27-VOCUS-2022-blog點閱前10名文章-回顧.html
@@ -10,65 +10,53 @@ author: 陸坡 (LUPO)
 
 <div class="draft-block draft--p left">2022年要過完了，小整理 這一年BLOG最常被瀏覽的文章。今年約寫了205篇介紹文，雖然不是每篇都很有料，但還是帶大家回顧前10名，今年點閱率最多的介紹文。如果沒看過，有興趣可以點進去瞧瞧：</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/968104ac-5320-439b-a287-6b1fcdcd39f6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-btlf6"><span style="font-weight: bold; ">No.10《素還真》霹靂宇宙再開新章</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2661e393-173b-4800-b6c1-05025e6285ba.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/2JlEMpy5ljY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/2JlEMpy5ljY"></iframe></div>
 <div class="draft-block draft--p left">布袋戲文化應該算是台灣好幾年下來一直持續未退燒的木偶戲，而再多次嘗試2022年霹靂又再一次將布袋戲搬上大螢幕，以當家第一主角霹靂裡高人氣角色《素還真》拍攝出關於這名角色在成為江湖俠義之士之前初出茅廬的起源故事，而開始素還真的傳奇一生。<br><br>《素還真》的前傳故事雖然是完整但離有趣或是好劇還必須多加琢磨，要有就算是掌中偶戲的武俠故事也有不失動漫畫或金庸筆下的武俠世界那樣精彩。我認為充新詮釋一個霹靂宇宙是個好開始，除了與當代價值觀接近的同時……也是讓新觀眾重新認識以素還真為首過去戲偶下的風采魅力。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/4259348">《素還真》霹靂宇宙再開新章</a></h3><span>Su Huan-Jen（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fpublished%2F257838381-290136536286667-2658279353996957677-n.jpg%3F1642650364&amp;width=550&amp;sign=nEojEsMf8Vw1Xi3-tT8KH6yL_YoApAERQ6tfqYAUo8U"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-ctb1f"><span style="font-weight: bold; ">No.9《約翰韋恩葛西訪談錄》小丑殺手</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9262cdf1-c340-4efa-b965-51bfe66759b1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/vIDbiQB6N28"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/vIDbiQB6N28"></iframe></div>
 <div class="draft-block draft--p left">犯罪紀錄影集《約翰韋恩葛西訪談錄》談論這位姦殺33人的罪犯，並將屍體埋藏在自家房下的殺人犯的自白與實際新聞畫面，和僥倖逃過殺害的被害者跟受害人家屬，和當時實際參與案件人員的訪談完整整起案件偵破始末。但透過錄音檔許多人反而對約翰韋恩葛西的變態心理更加匪夷所思。<br> <br>整體來說我覺得這部《約翰韋恩葛西訪談錄》不是著重在小丑殺手這點，並且公開這案件更多細節和獨家訪談這點，可以讓人對約翰韋恩葛西連環殺手的背景和心理人格特質有更多了解，進而看見社會與殺人魔的相互影響。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/4855676">《約翰韋恩葛西訪談錄》小丑殺手</a></h3><span>Conversations with a Killer: The John Wayne Gacy Tapes（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fp219765788885-b-hconversations-with-a-killer-the-john-wayne-gacy-tapes10-aa_orig.jpg&amp;width=550&amp;sign=KZSt_7cUWSHp6qAAeZicq69FrxLn8QY-DUg_x2YUbj4"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-m8h6"><span style="font-weight: bold; ">No.8《詛咒－Noroi》湖下村祭典的秘密</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/c2f14d1a-d00d-42c0-9b99-e6b77bde7c87.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/wZPVE-sgWsA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/wZPVE-sgWsA"></iframe></div>
 <div class="draft-block draft--p left">《詛咒－Noroi》是一部2005年上映的恐怖片，用偽紀錄片的方式呈現，故事聚焦於靈異作家小林雅文在完成以「詛咒」為題材的採訪紀錄片後，竟然神秘失蹤了？透過紀錄片和重新整理的片段資訊，發現許多過於巧合必且可怕的連結，究竟這部紀錄片中紀載什麼不為人知的秘密，節目製作組重新審視後有了驚人的發現……<br> <br>這是一部你如果喜歡日式恐怖節目的話就會覺得有趣的冷門恐怖片，雖然在預告片中把這部電影描繪的如何經典，但實際上以偽紀錄片形式的恐怖電影，在怎麼樣聲光效果就輸大製作恐怖片一大截。總體來說《詛咒－Noroi》算是難得白石晃士歪打正著的恐怖電影，喜歡日式恐怖的人會很喜歡，但說是經典稱不上，只能說是邪典。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/-noroi">《詛咒－Noroi》湖下村祭典的秘密</a></h3><span>這是一部你如果喜歡日式恐怖節目的話就會覺得有趣的冷門恐怖片，雖然在預告片中把這部電影描繪的如何經典，但實際上以偽紀錄片形式的恐怖電影，在怎麼樣聲光效果就輸大製作恐怖片一大截。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fmaxrenoroinoroinoroi9999sdefault_orig.jpg&amp;width=550&amp;sign=sQjHljoOvSy04y4H2TD0X2KrXQHgTlPqMKZSJyDD1Uc"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-7p8gn"><span style="font-weight: bold; ">No.7《通靈王》通靈之戰再重啟</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/e1abcdd0-8827-4fbe-8605-ca6deac1312d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_VYz5F2Wh_8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_VYz5F2Wh_8"></iframe></div>
 <div class="draft-block draft--p left">在過去2000年代也有一部炙手可熱的作品在許多動漫迷心中留有遺憾，2021年再度被動畫化的王道作《通靈王》，故事敘述性格悠哉想要散漫度日的通靈人麻倉葉，雖個性與世無爭但一出生就背負打倒想消滅全人類－葉王的使命而與夥伴參與通靈人大戰成為通靈王的冒險故事。<br> <br>撇除因中國代理商須過省亂刪一通的片段不說，整體動畫從開頭到最後節奏上都是忽快忽慢，甚至有很多片斷真的是前面節奏太過緩慢只好趕緊加速趕進度。完全照搬原作分鏡和節奏最後就變成只是在呈現漫畫名場面，除了懷舊外2021版《通靈王》整體表現並不能稱得上是好。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/2441517">《通靈王》通靈之戰再重啟</a></h3><span>シャーマンキング（2021）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fmaxreshaman-king2021sdshaman-kingefault_orig.jpg&amp;width=550&amp;sign=Fz6dyNyV44WOwa-T6YpMTqdB6FivdczETVZM2WwUrcA"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-e1o1o"><span style="font-weight: bold; ">No.6&nbsp;《全面失控：1999胡士托音樂節》人造災難</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9bdb4a40-a582-413c-be04-12c908bedae9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tm5uUzbUwR4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tm5uUzbUwR4"></iframe></div>
 <div class="draft-block draft--p left">《全面失控：1999胡士托音樂節》，是探討1999年有人試圖複製69年經典的胡士托音樂祭，但卻在各種原因推波助瀾下，造成了一場美國演唱會史上最大災難的紀錄電影。由當年的主辦方、參與者、工作人員和表演者，加上各種官方提供的歷史與新聞畫面，重現當時一團亂的1999年胡士托音樂節。<br><br>我認為這部紀錄片整體來說控制得很不錯，用每集一個小時的內容來講述當天發生的狀況，一天一集，並且除了演出排序之外，也不停帶出許多1999胡士托音樂節的整體問題，有意思的是錯誤並不是全權再主辦方，而是聽眾、表演者、主辦單位各自都推了一把。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/1999">《全面失控：1999胡士托音樂節》人造災難</a></h3><span>Trainwreck：Woodstock'99（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Ftrainwreck-woodstock-990a8f0trainwreck-woodstock-99597fe_orig.jpg&amp;width=550&amp;sign=8y7vGKsovkr37wdJUVcATh9bMd96aZZnJ0gAyGPNyPI"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-65lcc"><span style="font-weight: bold; ">No.5《鬧鬼實境28天》通靈鬧劇？</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2614d78e-a48c-4601-8c7b-4a53a9e00993.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/7nxuEsx99-k"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7nxuEsx99-k"></iframe></div>
 <div class="draft-block draft--p left">恐怖節目要求新求變有點困難，但還是有製作組做出嘗試，2022年由知名的華倫夫婦的女婿托尼斯佩拉，根據他們夫婦的理論製作了《鬧鬼實境28天》的通靈實境秀，節目製作請三組團隊在美國鬧鬼很兇的房屋裡，進行28天的通靈實驗。但在撥出後的結果卻收得滿滿負評，到底這檔見鬼直播實境秀發生了什麼不可犯的關鍵錯誤呢？<br><br>如果你是習慣觀看實際的鬼屋探險直播，或日式綜藝節目的探訪，可以說《鬧鬼實境28天》會讓你看到相當無聊或生氣。我認為這部綜藝有點不上不下的感覺，既要有絕對的真實感，又要演出很戲劇性的效果，結果導致三個鬼屋靈媒的靈異探索沒有一件可以讓觀眾信服。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/282793193">《鬧鬼實境28天》通靈鬧劇？</a></h3><span>28 Days Haunted（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2F28-days-of-netflix-horror-28-days-haunted28-days-hauntedheres-a-list_orig.jpg&amp;width=550&amp;sign=7ov5LLbUhDNx-sgH2AFDePCS17K_CrjHw48qh5hgxuA"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-ch4d5"><span style="font-weight: bold; ">No.4《鹿王》怪疫下的國家分裂</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/3ab33454-6ce3-47f0-b7e6-dc2d62fbffb3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/XJEdycdOfZ0"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/XJEdycdOfZ0"></iframe></div>
 <div class="draft-block draft--p left">改編同名小說動畫《鹿王》，是一部融合奇幻題材和醫學生技兩者，建構出宏大世界觀背景，故事以鹽礦奴隸凡恩因一次神祕黑犬襲擊礦場事件僥倖活下，與礦場女嬰悠娜逃出在外生活。國家派遣神醫赫薩爾調查這事件，發現許多人死於無藥可醫的「黑狼熱」，而治癒疾病的關鍵，很可能就在凡恩身上。<br> <br>動畫《鹿神》比較像是一部小說濃縮版與推坑的動畫作，也是一部讓這時代動畫迷沒機會接觸到《精靈守護者》和《獸之奏者》的人，重新認識上橋菜穗子這位作者所創作人與動物奇幻世界的入門作，可以看見與當代輕小說奇幻不大相同的敘述風格。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/2033886">《鹿王》怪疫下的國家分裂</a></h3><span>鹿の王 ユナと約束の旅（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2F1-3the-deer-king-yuna-and-the-promised-journeythe-deer-king-yuna-and-the-promised-journey3-750x422_orig.png&amp;width=550&amp;sign=6-UIKZJ_QGXe5nEcSi-x9EtxwCz5D5nb4A36fpqys64"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-euhnj"><span style="font-weight: bold; ">No.3&nbsp;​《咒》努力營造恐怖的偽紀錄片</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/058953d9-6ecd-42ae-89d2-501e53eadb32.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/UEdXuvh4HTE"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/UEdXuvh4HTE"></iframe></div>
 <div class="draft-block draft--p left">台灣恐怖片《咒》採用的是偽紀錄片的形式，導演使用了各種可能的鏡頭，如自拍相機、監視器、紅外線攝影機、手機自拍等等，然後用半倒敘法的方式用文字敘述時間點將零碎的影片組合起來，讓觀眾可以了解整個恐怖事件的始末。<br> <br>如果不追究劇情細節或是不怕噁心和密集恐懼症的人可以嘗試一下偽紀錄片的恐怖電影風格，畢竟過去或多或少都是國外或日式的偽紀錄恐怖片居多，台灣拍攝此類風格且用心營造氣氛算是少數，尤其是《咒》的場景和恐怖氛圍很符合台灣人對於鬼和詛咒的期待，這點比一些泰國、日本鬼片要來得親切。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/1708214">《咒》努力營造恐怖的偽紀錄片</a></h3><span>​Incantation（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fpublished%2F275020967-3017754781776020-3363959567513576441-n.jpg%3F1647415061&amp;width=550&amp;sign=S-Sl2S0BAPgMgdboiFPBxSPbnRZS0Muvd4GK4heTruw"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-7p192"><span style="font-weight: bold; ">No.2 《電駁叛客：邊緣行者》賭上所有來玩命</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/e4deb886-cb44-4565-893d-31e0abc88626.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/JtqIas3bYhg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/JtqIas3bYhg"></iframe></div>
 <div class="draft-block draft--p left">經歷真人與3D動畫的科幻作品，終於迎全新2D反烏托邦之作《電駁叛客：邊緣行者》，是部以賽博龐克為背景的近未來科幻動畫，故事以因品性不良被學校退學的大衛，與家人捲入了一場追車槍戰之中，大衛在那場戰役勉強活下，但卻成為這夜城的邊緣人，他得自立更深活下去，這時他發現家中竟然有一副神秘的「改造裝置」。<br> <br>以動畫來說這部作品很可能是2022年Netflix平台中表現最好的動畫作，除了故事精采以外，背景有著完整的遊戲原作撐腰很快可以讓人進入狀況，且在動作戲與感情戲取得不錯的平衡，並且不管是反派或正派角色都讓人印象深刻，不管是處理主角故事或是女角的故事都算可圈可點。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/8392361">《電駁叛客：邊緣行者》賭上所有來玩命</a></h3><span>CYBERPUNK EDGERUNNERS（2022）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fhttps-img-4gamers-com-tw-ckfinder-images-katy-netflix-220831-cyber-02_orig.jpg&amp;width=550&amp;sign=V4PUbgiIAOipXk9cqnQUiSNQsxYheVx7MVKQNc9SfKc"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-70ok3"><span style="font-weight: bold; ">No.1《壞壞壞天使》奇蹟與誘惑</span></h3>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/4be75de8-d4c0-4876-9bf5-28d40c96d6f7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/b8hIhcbVTco"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/b8hIhcbVTco"></iframe></div>
 <div class="draft-block draft--p left">塞爾維亞電影《壞壞壞天使》是一部融合了當地民族政治和宗教信仰，充滿對神與世探討的黑色幽默電影。故事以1992到2026年間發生的三段故事為主題，描述神蹟在世的荒謬與以父之名。老好人史托揚在某天頭上突然冒出光環，許多人將它當作天使或怪胎，他的妻子想讓史托揚恢復正常求助電視的宗教人士，結果卻是引發一連串神蹟效應的開端。<br> <br>這部電影有三段不同時間點的故事，每一段都息息相關，對基督教或天主教有所了解的人，可能更加深刻的看出電影中對於東歐宗教信仰在當代的諷刺性。在當代下宗教的力量似乎能使人向善也使人惡忌，我們可以看見建立慈善醫院救世甚至用神撫平安慰信眾之人。但同時世界也有因此發動聖戰或是阻止不同的人獲得幸福以神之名制裁異端的人。</div>
 <div><h3><a href="https://kevinmoleaf.weebly.com/35413355422608524120/6499115">《壞壞壞天使》奇蹟與誘惑</a></h3><span>Nebesa（2021）</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=http%3A%2F%2Fkevinmoleaf.weebly.com%2Fuploads%2F2%2F6%2F2%2F4%2F26248190%2Fnebesa-posnebesa-2021ter-3-12nebesa-202100_orig.jpg&amp;width=550&amp;sign=-OtOYZ8eASrM5GVaW70nquNazR8nnqyQjqn-PkkTEuM"></div>
-<div class="draft-block draft--p left"></div>
