--- a/_posts/2022-12-27-VOCUS-解決問題前要先認識問題-3.html
+++ b/_posts/2022-12-27-VOCUS-解決問題前要先認識問題-3.html
@@ -8,7 +8,7 @@ tags: blog
 author: 王立第二戰研所
 ---
 
-<div class="draft-block draft--p left">當民眾對問題的認識越深刻，就不會被分析問題拐去。想要拐你的人，會從分析問題歪掉開始，進而影響解決方案，最後讓你想錯方向。就像「解放軍有反坦克飛彈，所以買坦克沒有用，不要浪費錢，應該加強XX方向」，分析跟解決之道都很符合邏輯，但各位朋友一看就知道，這種說法是有問題的。舉例可以一眼就看出，實際案例多數難以發覺。</div>
+<blockquote class="draft-block draft--blockquote">當民眾對問題的認識越深刻，就不會被分析問題拐去。想要拐你的人，會從分析問題歪掉開始，進而影響解決方案，最後讓你想錯方向。就像「解放軍有反坦克飛彈，所以買坦克沒有用，不要浪費錢，應該加強XX方向」，分析跟解決之道都很符合邏輯，但各位朋友一看就知道，這種說法是有問題的。舉例可以一眼就看出，實際案例多數難以發覺。</blockquote>
 <div><h3><a href="https://vocus.cc/article/63839781fd89780001666f5d">解決問題前要先認識問題（2）｜方格子 vocus</a></h3><span>簡單說，一個問題可以從認識問題，到分析問題，最後解決問題可以分三個層次。筆者以前，就是從中間開始，認為只要可以分析問題，就能夠找到解決方法。隨著時間過去，慢慢理解到，是因為多數人對問題認識不清，或根本是錯的，才會後面整個歪掉。 科普在台灣非常基本，應該沒人覺得科普是浪費時間，就以目前的狀況來說，倘若有人提出一個問題：「我們要怎樣節省能源，或是讓能源輸出更多？」 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fff4f1b7b-83a2-4ad4-a3b6-7eb959cc72d1.jpg%26width%3D1200%26sign%3DMQ-8VKwJ8Uh7xFEDYFCCZFFpl6QDvFM4Bn0ztzhWvjQ&amp;width=550&amp;sign=Lf0CwqQ5351WZrRUs0eXqo1H9nxHV3ly6RaKGK73h2A"></div>
 <div class="draft-block draft--p left">認識問題說來簡單，要去做很難，因為想講比較大的範圍，就會遇到意識形態。</div>
 <div class="draft-block draft--p left">例如，台灣中國彼此之間是不是敵對？有沒統獨問題？這絕對吵不完。但許多我們爭執的問題，本身就是對台灣、中國彼此的狀態認識不同，既然認識不同，當然就不會有交集。沒交集，對於解決兩岸問題，所提出的各種分析也是千奇百怪，好比前陣子新聞指出，似乎國民黨內有人覺得，兩岸問題本質是中國有沒民主化，民主中國就可以帶來和平繁榮。</div>
@@ -28,4 +28,15 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">所謂的認識問題，在軍普上來說指的就是這種常識。如果換成科普，因為學校就有教，一般民眾「認識問題」的層次就可以提高點。而軍普之所以得非常簡單明白，以部分軍武圈人士的角度來看，幾乎是蠢到無以復加的程度，道理也不難懂，就學校沒教，大家沒聽過而已。</div>
 <div class="draft-block draft--p left">筆者也就遇過，台美人一直引用美軍概念套用過來，老覺得台灣做得不夠好。可是美國是一個三億人有四億支槍的國家欸，不談槍枝數量談用槍人口，美國有數千萬人有基本槍械運用概念。</div>
 <div class="draft-block draft--p left">所以直接拿美國當例子，在台灣上談論怎麼分析問題，為何常常出事？對美國人來說，要討論在烏克蘭怎樣進行小組戰術進攻，可能周圍鄰居一拉，就有退役美軍，或是好幾個對槍械運用有概念的人。他們有需要從頭討論，步槍兵該幹嘛、通信兵該幹嘛這類問題？</div>
-<div class="draft-block draft--p left">但在台灣呢，</div>
+<div class="draft-block draft--p left">但在台灣呢，沒當過兵可說幾乎不懂軍事，就算當過恐怕也是一堆人不懂，那今天開軍事民防課，有關戰鬥之類課程，各位覺得我們該從哪邊開始？恐怕不會是直接進入小組搭配，可能基本戰鬥教練都得重來。</div>
+<div class="draft-block draft--p left">軍普推廣，筆者自己嘗試去與一般人討論後才發現，自己實在太天真。多數沒當過兵的人，完全不知道你在講什麼，別說是飛機大砲性能怎樣，各種名詞是一丁點概念都沒。即便當過兵的弟兄，很可能除了自己有接觸過的，其他專科也是一概不知，連志願役的也差不多。</div>
+<div class="draft-block draft--p left">加上台灣各種文憑主義作祟，總想要找個大頭說話，照抄就好，導致推廣非常困難。</div>
+<h3 class="draft-block draft--h3" name="header-6sp7h">開拓廣大的軍普市場，以知識打底深刻「認識問題」</h3>
+<div class="draft-block draft--p left">但反過來說，筆者也發現可能性，軍普是一個非常廣大的藍海市場。想知道更多軍事常識、知識的朋友很多，只是過去不得其門而入，因為坊間的軍事期刊，已經變成軍迷專用，沒有任何一本針對一般人。</div>
+<div class="draft-block draft--p left">也就是說，台灣現在沒有一本，是給軍事知識常識為零的人，作為入門的軍事書。</div>
+<div class="draft-block draft--p left">以一個普通人的立場來說，翻開任何一本軍事書刊，要概念就是滿滿戰史，談武器就是一堆數據，非常不友善。而軍事圈對一般人也不友善，老覺得想學就該自己努力爬上來，充滿對普通人的不屑與嘲弄。筆者自己感觸很深，因為想知道的人很多，只要你願意好好談，想辦法解釋，付出耐心，人家是要聽的。之所以不想聽，更多時候是不想被羞辱。</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/86feb37f-f7e6-42cd-8dbe-23ba74c5a270.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">這樣罵誰想學（編）</figcaption></div></div>
+<div class="draft-block draft--p left">回到主題，認識問題很重要，在軍事上更是如此，是因為當民眾整體軍事常識提高，就不容易被騙。需要人人會思考軍隊前進要時間，飛彈飛行要時間，在立體空間中武器怎麼使用，而不是需要人人背誦各種軍事年鑑，也不用熟讀上下數百年戰史。</div>
+<div class="draft-block draft--p left">因為一般人並不想做學術研究，就跟我們做科普，目的只是啟發，或是提升一般人的生活科學常識能力。軍普也是，一般人只想知道點基本概念，啟發自己的興趣，或多了解點各種武器性能跟用途。</div>
+<div class="draft-block draft--p left">真的不是只想知道打贏打輸這麼簡單，台灣平均學歷很高，有求知慾的人總數也不少。</div>
+<div class="draft-block draft--p left">當越多人真正認識問題，層次得以提升，最終可以讓問題分析更深刻，各行各業都參與，解決方案也會越來越多。</div>
