--- a/_posts/2022-12-28-VOCUS-later-spring-晚春季.html
+++ b/_posts/2022-12-28-VOCUS-later-spring-晚春季.html
@@ -8,13 +8,9 @@ tags: blog
 author: 羅聖爾
 ---
 
-<h3 class="draft-block draft--h3" name="header-6b2q1"></h3>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">曲目：Later Spring 晚春季</span></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="http://www.youtube.com/watch?v=9Weg6xZR3ek&amp;sns=em"></div>
+<div><iframe allowfullscreen src="http://www.youtube.com/embed/9Weg6xZR3ek"></iframe></div>
 <div class="draft-block draft--p center"><a href="http://www.youtube.com/watch?v=9Weg6xZR3ek&amp;sns=em" target="_blank" class="draft--a"><span style="font-weight: bold; ">http://www.youtube.com/watch?v=9Weg6xZR3ek&amp;sns=em</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Later Spring / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">羅聖爾 (2010.05.01)</span></div>
 <div class="draft-block draft--p center"><span style="font-style: italic; font-weight: bold; ">Copyright @ LS. Creative Studio</span></div>
-<div class="draft-block draft--p left"></div>
