--- a/_posts/2022-12-27-INMEDIA-路旁三色桶全撤-環團批-綠在區區-網絡不足變-綠在崎嶇-促增配套.html
+++ b/_posts/2022-12-27-INMEDIA-路旁三色桶全撤-環團批-綠在區區-網絡不足變-綠在崎嶇-促增配套.html
@@ -17,8 +17,8 @@ author: 獨媒報導
 <p>綠惜地球訪問了兩名有定期使用「綠在區區」的單棟樓居民，了解他們的回收困難。約60歲的周生一家五口居於旺角黑布街單幢大廈，平日主要的回收物包括膠水樽、清潔用品、個人護理用品樽等，他亦會將同層運動中心棄置的膠樽撿起洗乾淨後回收。</p>
 <p>周生表示不相信三色回收箱的成效，平時會將金屬、紙皮交到流動回收車，或將膠樽交到新世紀廣場的入樽機，但這些回收點的回收物種類有限，故他主要使用可回收8種回收物，包括廢紙、金屬、塑膠、玻璃樽、小型電器、充電池等的「綠在區區」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/fFzwf071WT" title="螢幕截圖 2022-12-27 下午5.56.59"><img src="https://live.staticflickr.com/65535/52589278920_b01719dc84_b.jpg" width="760" alt="螢幕截圖 2022-12-27 下午5.56.59" /></a><br /><em>周生每星期將三大袋約一包米重量的回收物交到「綠在大角咀」</em></p>
-<p>然而距離周生住處最近的「綠在區區」已是步行距離約16分鐘的「綠在大角咀」，周生每星期花半小時來回，將三大袋約一包米重量的回收物交到「綠在大角咀」，沿途會經過露天濕街市及11個食環署的垃圾桶，亦不時受到途人奇異目光，周生對此感到十分不便。他曾在雨天前往「綠在大角咀」時滑倒，導致左邊膊頭有大片瘀傷，需花費700元接受兩次鐵打治療，等於在入樽機回收7,000個膠樽的價錢。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/x2y6D6kn27" title="螢幕截圖 2022-12-27 下午5.57.02"><img src="https://live.staticflickr.com/65535/52589281460_6cc328cb80_b.jpg" width="453" alt="螢幕截圖 2022-12-27 下午5.57.02" /></a><br /><em>周生在下雨時前往「綠在大角咀」時滑倒，導致左邊膊頭有大片瘀傷</em></p>
+<p>然而距離周生住處最近的「綠在區區」已是步行距離約16分鐘的「綠在大角咀」，周生每星期花半小時來回，將三大袋約一包米重量的回收物交到「綠在大角咀」，沿途會經過露天濕街市及11個食環署的垃圾桶，亦不時受到途人奇異目光，周生對此感到十分不便。他曾在雨天前往新世紀廣場的入樽機時滑倒，導致左邊膊頭有大片瘀傷，需花費700元接受兩次鐵打治療，等於在入樽機回收7,000個膠樽的價錢。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/x2y6D6kn27" title="螢幕截圖 2022-12-27 下午5.57.02"><img src="https://live.staticflickr.com/65535/52589281460_6cc328cb80_b.jpg" width="453" alt="螢幕截圖 2022-12-27 下午5.57.02" /></a><br /><em>周生在下雨時前往新世紀廣場的入樽機時滑倒，導致左邊膊頭有大片瘀傷</em></p>
 <p><strong>灣仔居民跨區回收 </strong></p>
 <p>30歲的Thomas 則與伴侶居於灣仔軒尼詩道的單幢大廈，兩人均為上班族，平日主要產生的廢物包括玻璃樽、鋁罐、紙等。他指距離住處最近的是「綠在灣仔」，但都需步行22分鐘，又沒有交通工具直達，即使冬天都會行到汗流浹背。因此他寧願趁周末與媽媽吃飯，順便乘搭巴士到「綠在紅磡」回收。不過提著多袋回收物乘車並不方便，Thomas指：「有時候兩隻手都拎住嘢，要到車中間空洞位置放低啲回收物，先拎到八達通出黎俾錢」，亦曾試過打翻回收物，幸好司機願意等他。</p>
 <p>Thomas 表示家附近有回收流動點，營業時間為星期五下午2時半至5時半，與他的上班時間相撞，加上天氣惡劣又不開放，Thomas 難以將回收物交到回收流動點，他望流動點的營業時間可延長至晚上及於假日開放，以方便上班族。</p>
